--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,20 @@
 <html>
   <head>
     <title>TallerPokemon</title>
-    <%= csrf_meta_tags %>
+    <!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!--     <%= csrf_meta_tags %> -->
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
 
-  <body>
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
+  <body style="margin: 0">
+  	<%= render partial: "layouts/navbar" %>
+	<p class="notice" sytle="margin: 0"><%= notice %></p>
+	<p class="alert"  sytle="margin: 0"<%= alert %></p>
     <%= yield %>
   </body>
 </html>
