--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,6 +1,8 @@
+<div class="jumbotron">
+
 <p id="notice"><%= notice %></p>
 
-<h1>Pokemons</h1>
+<h1 style="color: white">Pokemons</h1>
 
 <table>
   <thead>
@@ -26,4 +28,6 @@
 
 <br>
 
-<%= link_to 'New Pokemon', new_pokemon_path %>
+<%= link_to 'New Pokemon', new_pokemon_path%>
+
+</div>
