--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,5 +1,4 @@
-<div class="jumbotron">
-
+<%= current_user.nil? %>
 <p id="notice"><%= notice %></p>
 
 <h1 style="color: white">Pokemons</h1>
@@ -29,5 +28,3 @@
 <br>
 
 <%= link_to 'New Pokemon', new_pokemon_path%>
-
-</div>
