--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,17 +30,31 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.email %>
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="javascript:void(0)">Datos Personales</a></li>
+                
+                <li role="separator" class="divider"></li>
+                <li><a href="<%= destroy_user_session_path %>" data-method="delete">Salir</a></li>
+              </ul>
+          </li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Entra ya!!
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="<%= new_user_registration_path %>">Registro</a></li>
+                
+                <li role="separator" class="divider"></li>
+                <li><a href="<%= new_user_session_path %>">Entrar</a></li>
+              </ul>
+          </li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
