--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,8 +44,7 @@
           </li>
         <% else %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Entra ya!!
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Entra ya!!
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="<%= new_user_registration_path %>">Registro</a></li>
